--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -4,7 +4,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="src/img/logoSennaProv.ico" />
+    <link rel="icon" type="image/png" href="src/assets/img/logoSennaProv.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
